idf_component_register(SRCS "src/motors.c"
                            "src/led.c"
                            "src/adc.c"
                            "src/i2c_dev.c"
                            "src/i2c_drv.c"
                            "src/mpu6050.c"
                            "src/vl53l1x/vl53l1x.c"
                            "src/vl53l1x/vl53l1_api_calibration.c"
                            "src/vl53l1x/vl53l1_api_core.c"
                            "src/vl53l1x/vl53l1_api_debug.c"
                            "src/vl53l1x/vl53l1_api_preset_modes.c"
                            "src/vl53l1x/vl53l1_api_strings.c"
                            "src/vl53l1x/vl53l1_api.c"
                            "src/vl53l1x/vl53l1_core_support.c"
                            "src/vl53l1x/vl53l1_core.c"
                            "src/vl53l1x/vl53l1_error_strings.c"
                            "src/vl53l1x/vl53l1_register_funcs.c"
                            "src/vl53l1x/vl53l1_silicon_core.c"
                            "src/vl53l1x/vl53l1_wait.c"
                       INCLUDE_DIRS "interface" "interface/vl53l1x" "src"
                       REQUIRES driver esp_adc freertos)